--- a/BootstrapWebApp/BootstrapWebApp/BootstrapWebApp.csproj
+++ b/BootstrapWebApp/BootstrapWebApp/BootstrapWebApp.csproj
@@ -270,6 +270,7 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Service References\Application Insights\ConnectedService.json" />
     <Content Include="Views\Home\Ruudukko.cshtml" />
+    <Content Include="Views\Home\Modal.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
